[metadata]
name = atomphys
version = 0.0.4
author = "Matt Grau"
author_email = "matt.grau@gmail.com"
license = MIT,
description = Atomic Physics for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = AMO, atomic physics
url = https://github.com/mgrau/atomphys,
project_urls = 
    Bug Tracker = https://github.com/mgrau/atomphys/issues
classifiers =
    # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    Development Status :: 3 - Alpha
    # Define that your audience are developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
install_requires = 
    pint

[options.package_data]
* = *.json

[zest.releaser]
create-wheel = yes

[check-manifest]
ignore =
    requirements_dev.txt
    .pre-commit-config.yaml
    pull_request_template.md
    # don't include examples
    examples/*
    # don't include docs source files
    mkdocs.yml
    docs/**
    requirements_docs.txt
    binder/*

[flake8]
ignore=
    # line too long - let black worry about that
    E501
    # line break before binary operator
    W503
    # Do not use variables/functions named 'I' or 'O'
    # keep these in for physics reasons
    E741
    E743
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
default_section=THIRDPARTY
known_first_party=atomphys
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True